--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "daisyui": "^2.50.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.25.0",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
+    "tailwindcss": "^3.2.4",
     "web-speech-cognitive-services": "^7.1.3",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "($env:HTTPS = 'true') -and (npm start)"
   },
   "eslintConfig": {
     "extends": [
